--- a/TestPackageRefRestoreGit/TestPackageRefRestoreGit.csproj
+++ b/TestPackageRefRestoreGit/TestPackageRefRestoreGit.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
-  <!--<ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
-  </ItemGroup>-->
+  </ItemGroup>
 
 </Project>
